--- a/OZON/ML/SEMINARS/ML_HW_2.ipynb
+++ b/OZON/ML/SEMINARS/ML_HW_2.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -279,22 +279,12 @@
        "True"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class Test:\n",
-    "    def __init__(self, x):\n",
-    "        self.x = x\n",
-    "    \n",
-    "    def __add__(self, z):\n",
-    "        return z != 3\n",
-    "    \n",
-    "    def __radd__(self, z):\n",
-    "        return z == 2  # adding two objects \n",
-    "   \n",
     "def foo(x):\n",
     "    if x + 1 is 1 + x:\n",
     "        return False\n",
@@ -302,7 +292,59 @@
     "        return False\n",
     "    return True\n",
     "\n",
-    "foo(Test(0))\n"
+    "foo(-7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hello(name = \"Stranger\"):\n",
+    "    print(f'Hello {name}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Stranger\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def maximum(x):\n",
+    "    def maximum1(x, element):\n",
+    "        if len(x) == 0:\n",
+    "            return element\n",
+    "        else:\n",
+    "            return maximum1(x[1:], element) if x[0] < element else maximum1(x[1:], x[0])\n",
+    "    return maximum1(x, x[0])\n",
+    "\n",
+    "print(maximum([3,4,5,1,2]))\n"
    ]
   },
   {
@@ -310,7 +352,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "memo = {}\n",
+    "def fibbonaci(n):\n",
+    "     if n <= 2: \n",
+    "        return 1\n",
+    "     else:\n",
+    "        left = memo[n - 1] if n - 1 in memo else fibbonaci(n - 1)\n",
+    "        right = memo[n - 2] if n - 2 in memo else fibbonaci(n - 2)\n",
+    "        memo[n] = left + right\n",
+    "        return memo[n]\n",
+    "    \n",
+    "print(fibbonaci(2400))"
+   ]
   },
   {
    "cell_type": "code",
