fetch linal from repo

--- a/OZON/ML/SEMINARS/ML_HW_2.ipynb
+++ b/OZON/ML/SEMINARS/ML_HW_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,7 @@
        "       [0.2 , 0.2 , 0.  , 0.2 ]])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,29 +158,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "x = [random.randint(1,10) for _ in range(10000)]"
+    "x = [random.randint(1, 10000000) for _ in range(1000000)]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.83 ms ± 216 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "72.7 ms ± 1.17 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
+    "\n",
     "y = np.array(x)\n",
     "def encode_rle(X):\n",
     "    n = len(X)\n",
@@ -194,14 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.29 ms ± 1.93 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "218 ms ± 11 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -266,6 +268,28 @@
     "# indexes = np.argpartition(-x, 5, axis = 1)[:, :5]\n",
     "# np.take_along_axis(indexes, np.argsort(np.take_along_axis(-x, indexes, axis = 1), axis = 1), axis = 1)\n",
     "get_best_indices(x, 5, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1e1 1e2   1e3     1e4      1e5      1e6        1e7\n",
+    " 20  20    26      73      540      8500       150000\n",
+    "  2  20   200    1900    20000      223000     2000000"
    ]
   },
   {
@@ -390,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
