--- a/MADE/GEO/Vector_data/3. geographic_vs_projected_crs.ipynb
+++ b/MADE/GEO/Vector_data/3. geographic_vs_projected_crs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,24 +49,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<shapely.geometry.point.Point at 0x7fb8717398b0>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "boulder_df = np.array([[476911.31,  4429455.35]])\n",
     "geometry = [Point(xy) for xy in boulder_df]\n",
     "\n",
     "boulder_loc = gpd.GeoDataFrame(geometry,\n",
     "                               columns=['geometry'],\n",
-    "                               crs={'init': 'epsg:2957'})"
+    "                               crs={'init': 'epsg:2957'})\n",
+    "geometry"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
@@ -169,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
