--- a/OZON/PYTHON_INTRODUTION/PyIntro_Lecture 4.ipynb
+++ b/OZON/PYTHON_INTRODUTION/PyIntro_Lecture 4.ipynb
@@ -2109,13 +2109,7 @@
       "Вызов функции с n = 1881\n",
       "Вызов функции с n = 1880\n",
       "Вызов функции с n = 1879\n",
-      "Вызов функции с n = 1878\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Вызов функции с n = 1878\n",
       "Вызов функции с n = 1877\n",
       "Вызов функции с n = 1876\n",
       "Вызов функции с n = 1875\n",
@@ -2865,13 +2859,7 @@
       "Вызов функции с n = 1131\n",
       "Вызов функции с n = 1130\n",
       "Вызов функции с n = 1129\n",
-      "Вызов функции с n = 1128\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Вызов функции с n = 1128\n",
       "Вызов функции с n = 1127\n",
       "Вызов функции с n = 1126\n",
       "Вызов функции с n = 1125\n",
@@ -3621,13 +3609,7 @@
       "Вызов функции с n = 381\n",
       "Вызов функции с n = 380\n",
       "Вызов функции с n = 379\n",
-      "Вызов функции с n = 378\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Вызов функции с n = 378\n",
       "Вызов функции с n = 377\n",
       "Вызов функции с n = 376\n",
       "Вызов функции с n = 375\n",
@@ -4163,9 +4145,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 line\r\n",
-      "2 line\r\n",
-      "3 line\r\n"
+      "1 line\n",
+      "2 line\n",
+      "3 line\n"
      ]
     }
    ],
@@ -4944,7 +4926,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34msome_dir\u001b[m\u001b[m\r\n"
+      "\u001b[34msome_dir\u001b[m\u001b[m\n"
      ]
     }
    ],
@@ -4992,7 +4974,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -5014,5 +4996,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
