--- a/MADE/GEO/WEEK4/ORS/Routing_Optimization_Idai.ipynb
+++ b/MADE/GEO/WEEK4/ORS/Routing_Optimization_Idai.ipynb
@@ -51,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -697,9 +695,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ors-examples",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ors-examples"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -711,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -728,5 +726,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
