--- a/OZON/PYTHON_INTRODUTION/PyIntro_Seminar 4.ipynb
+++ b/OZON/PYTHON_INTRODUTION/PyIntro_Seminar 4.ipynb
@@ -1142,25 +1142,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beautiful is better than ugly.\r\n",
-      "Explicit is better than implicit.\r\n",
-      "Simple is better than complex.\r\n",
-      "Complex is better than complicated.\r\n",
-      "Flat is better than nested.\r\n",
-      "Sparse is better than dense.\r\n",
-      "Readability counts.\r\n",
-      "Special cases aren't special enough to break the rules.\r\n",
-      "Although practicality beats purity.\r\n",
-      "Errors should never pass silently.\r\n",
-      "Unless explicitly silenced.\r\n",
-      "In the face of ambiguity, refuse the temptation to guess.\r\n",
-      "There should be one-- and preferably only one --obvious way to do it.\r\n",
-      "Although that way may not be obvious at first unless you're Dutch.\r\n",
-      "Now is better than never.\r\n",
-      "Although never is often better than *right* now.\r\n",
-      "If the implementation is hard to explain, it's a bad idea.\r\n",
-      "If the implementation is easy to explain, it may be a good idea.\r\n",
-      "Namespaces are one honking great idea -- let's do more of those!\r\n"
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
      ]
     }
    ],
@@ -1185,7 +1185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
